# AliExpress-Order-Export

./: .gitignore  LICENSE  README.md  aliexpress_export.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_aliexpress_export.py
