[project]
name = "aliexpress-order-export"
version = "0.1.0"
description = "Export AliExpress orders to CSV with optional invoice PDFs."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "browser-cookie3>=0.20.1,<1",
  "openpyxl>=3.1.5,<4",
  "pillow>=11.2,<12",
]

[dependency-groups]
dev = [
  "ruff>=0.11.2,<0.12",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".playwright-browsers", ".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
